--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,12 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <script src="AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script src="lib/Tone.js"
+                type="text/javascript"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <title>Tonejs test</title>
     </head>
     <body>
         <div class="app">
@@ -47,9 +52,6 @@
             </div>
         </div>
         <div><a class="play" onclick="this.innerText = play();">play</a></div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script src="lib/Tone.js"
-                type="text/javascript"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+
     </body>
 </html>
